--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # production
 /build
+/app
 
 # misc
 .DS_Store
@@ -30,6 +31,10 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+.gitignore
+
+*.mjs
 
 # typescript
 *.tsbuildinfo
